Fix video card collapse by adding sizing container v1.0.23

--- a/src/components/SingleDayView.module.css
+++ b/src/components/SingleDayView.module.css
@@ -200,7 +200,15 @@
 }
 
 /* Video Card Internals */
-/* .thumbnail removed */
+.videoPlaceholderSizer {
+    position: relative;
+    height: 100%;
+    /* Fill frame height */
+    aspect-ratio: 322 / 609;
+    /* Force specific ratio to drive width */
+    width: auto;
+    background-color: black;
+}
 
 .playOverlay {
     position: absolute;
